--- a/styles/style.css
+++ b/styles/style.css
@@ -16,10 +16,50 @@ nav ul li {
   height: 30px;
 }
 
-.btn-primary button {
+.nav-btn button {
   border-radius: 4px;
   background: rgba(70, 145, 101, 1);
   padding: 15px 18px;
   width: 150px;
   color: white;
+  border: none;
+}
+.banner-container{
+    background-image: url("../assets/hero-bg.png");
+    height: 400px;
+    width: 100%;
+    padding-top: 80px;
+    text-align: center;
+}
+.banner-btn{
+    color: rgba(70, 145, 101, 1);
+    font-size: 10px;
+    font-family: Inter;
+    font-weight: 400;
+    font-style:normal;
+    text-align: center;
+    border-radius: 80px;
+    padding: 8px 12px 8px 12px;
+    border: none;
+    
+}
+.banner-btn-two{
+    background-color: rgba(70, 145, 101, 1);
+    color: #fff;
+    padding: 15px;
+    margin: 20px;
+    border-radius: 6px;
+    border: none;
+}
+.banner-btn-three{
+    padding: 15px;
+    border-radius: 6px;
+    border: none;
+}
+.text{
+    /* color: rgba(255,255,255,1); */
+    color: #fff;
+}
+.text-primary{
+    color: rgba(70, 145, 101, 1);
 }
